<resources>
    <string name="app_name">Watcha by Seongrok</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="movie_info_sample">
        새로운 스파이더맨 평행세계의 시작!\n
        “스파이더맨은… 우리 말고 얼마나 더 있죠?”\n\n

        평범한 10대 ‘마일스 모랄레스’는 우연히 방사능 거미에 물려 스파이더맨 능력을 가지게 된다.\n
        혼란스러워하던 ‘마일스’는 악당과 싸우고 있는 ‘피터 파커’를 마주치게 되고
        ‘피터 파커’는 ‘마일스’가 자신과 같은 능력을 가지고 있음을 직감한다.\n
        여러 개의 평행세계가 존재한다는 것을 알게 된 ‘마일스’와 ‘피터 파커’는
        이후 스파이더우먼 ‘스파이더 그웬’, ‘스파이더맨 누아르’, ‘스파이더햄’ 등
        평행세계 속 공존하는 모든 스파이더맨들을 만나게 되는데…\n
        하나의 유니버스에서 만나 팀을 결성한 스파이더맨들은 과연 세계를 구할 수 있을까?\n\n

        스파이더맨들의 새로운 시대가 열린다!
    </string>

    <string name="content_url"><![CDATA[https://storage.googleapis.com/exoplayer-test-media-1/mkv/android-screens-lavf-56.36.100-aac-avc-main-1280x720.mkv]]></string>
    <string name="content_url2"><![CDATA[https://drive.google.com/uc?authuser=0&id=1AZ7ZQ33WkkWhn8fwxTe4kd5az2vWNtY-&export=download]]></string>
    <string name="content_url3"><![CDATA[https://sample-videos.com/video123/mkv/720/big_buck_bunny_720p_30mb.mkv]]></string>
    <string name="content_url4"><![CDATA[https://drive.google.com/uc?export=download&confirm=V2Ii&id=1ES5nenLpQU1TWrBakDFEiSCHVXgvbWtb]]></string>

    <string name="content_url_dash">https://bitdash-a.akamaihd.net/content/MI201109210084_1/mpds/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.mpd</string>
    <string name="content_url_thumbnails">https://bitdash-a.akamaihd.net/content/MI201109210084_1/thumbnails/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.jpg</string>
    <string name="content_url_smooth">http://playready.directtaps.net/smoothstreaming/SSWSS720H264/SuperSpeedway_720.ism</string>
    <string name="content_url_hls">https://mnmedias.api.telequebec.tv/m3u8/29880.m3u8</string>

    <string name="action_settings">Settings</string>

    <string name="watcha">WATCHA</string>
    <string name="home_search">작품, 배우, 감독, 사용자 검색</string>
    <string name="movie">영화</string>
    <string name="tv">TV</string>
    <string name="book">도서</string>

    <string name="tab_title_recommendation">추천</string>
    <string name="tab_title_evaluation">평가하기</string>
    <string name="tab_title_news">소식</string>
    <string name="tab_title_mypage">마이페이지</string>

    <string name="transition_name_movie_tall">transition_name_movie_tall</string>
    <string name="transition_name_movie_wide">transition_name_movie_wide</string>

    <string name="edit_text_search">검색</string>
    <string name="fragment_search_no_data">검색 결과가 없어요.\n다른 검색어를 입력해보세요.</string>

    <string name="exoplayer_no_translations">자막이 없습니다.</string>

    <string name="alert_dialog_message_remove_recent_search_history">선택된 검색 기록을 삭제하시겠습니까?</string>
    <string name="alert_dialog_message_remove_all_recent_search_history">검색 기록을 모두 삭제하시겠습니까?</string>
</resources>
