<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/container"
             android:background="@color/white"
             tools:context=".presentation.recommendation.RecommendationFragment">

    <android.support.v4.widget.SwipeRefreshLayout android:id="@+id/swipe_refresh_layout"
                                                  android:layout_width="match_parent"
                                                  android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
                                                    android:id="@+id/nested_scroll_view">

            <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                         android:layout_height="match_parent"
                                                         android:background="@color/white">

                <android.support.constraint.ConstraintLayout android:layout_width="0dp"
                                                             android:layout_height="400dp"
                                                             android:id="@+id/header"
                                                             android:background="@drawable/bg5"
                                                             app:layout_constraintTop_toTopOf="parent"
                                                             app:layout_constraintStart_toStartOf="parent"
                                                             app:layout_constraintEnd_toEndOf="parent">

                    <TextView android:id="@+id/logo_watcha"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/watcha"
                              android:textSize="46sp"
                              android:textColor="@color/white"
                              android:textStyle="bold"
                              app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>

                </android.support.constraint.ConstraintLayout>

                <!-- 영화, tv, 도서 -->
                <LinearLayout android:orientation="horizontal"
                              android:layout_width="0dp"
                              android:layout_height="110dp"
                              app:layout_constraintStart_toStartOf="parent"
                              android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                              app:layout_constraintEnd_toEndOf="parent"
                              android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                              app:layout_constraintHorizontal_bias="0.501"
                              android:id="@+id/linearLayout2" android:layout_marginTop="16dp"
                              app:layout_constraintTop_toBottomOf="@+id/search_layout"
                              android:foreground="?android:attr/selectableItemBackground"
                              android:background="@drawable/round_corner_stroke_background">

                    <!-- 영화 -->
                    <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/frame_layout_movie"
                            android:foreground="?android:attr/selectableItemBackground">
                        <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center">
                            <ImageView
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_gravity="center"
                                    app:srcCompat="@drawable/movie" android:tint="@android:color/holo_green_light"/>
                            <TextView
                                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="8dp"
                                    android:text="@string/movie"
                                    android:textColor="@android:color/black"/>
                        </LinearLayout>
                    </FrameLayout>

                    <FrameLayout android:layout_width="1dp" android:layout_height="match_parent"
                                 android:background="@color/stroke"/>

                    <!-- TV -->
                    <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/frame_layout_tv"
                            android:foreground="?android:attr/selectableItemBackground">
                        <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center">
                            <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="40dp" android:layout_marginBottom="2dp"
                                    android:layout_gravity="center"
                                    app:srcCompat="@drawable/tv" android:scaleType="fitCenter"
                                    android:tint="@android:color/holo_orange_light"/>
                            <TextView
                                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="8dp"
                                    android:text="@string/tv"
                                    android:textColor="@android:color/black"/>
                        </LinearLayout>
                    </FrameLayout>

                    <FrameLayout android:layout_width="1dp" android:layout_height="match_parent"
                                 android:background="@color/stroke"/>

                    <!-- 도서 -->
                    <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/frame_layout_book"
                            android:foreground="?android:attr/selectableItemBackground">
                        <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center">
                            <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="40dp"
                                    android:layout_gravity="center"
                                    app:srcCompat="@drawable/book" android:scaleType="fitCenter"
                                    android:tint="@android:color/holo_blue_light"/>
                            <TextView
                                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="8dp"
                                    android:text="@string/book"
                                    android:textColor="@android:color/black"/>
                        </LinearLayout>
                    </FrameLayout>
                </LinearLayout>

                <!-- 검색 바 -->
                <android.support.constraint.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp" android:layout_marginBottom="48dp"
                        app:layout_constraintBottom_toBottomOf="@+id/header"
                        android:id="@+id/search_layout"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:background="@drawable/all_round_corner_background">

                    <ImageView
                            android:layout_width="40dp"
                            android:layout_height="0dp" app:srcCompat="@drawable/search"
                            android:id="@+id/imageView2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:padding="5dp"/>
                    <TextView
                            android:text="@string/home_search"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView3" app:layout_constraintStart_toEndOf="@+id/imageView2"
                            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="16sp"
                            android:textColor="@android:color/darker_gray"/>
                    <ImageView
                            android:layout_width="40dp"
                            android:layout_height="0dp" app:srcCompat="@drawable/barcode"
                            android:id="@+id/imageView3"
                            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" android:padding="6dp"
                            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
                </android.support.constraint.ConstraintLayout>

                <!-- 컨텐츠 -->
                <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
                             android:layout_marginTop="32dp" android:layout_marginLeft="16dp"
                             android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                             app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                             app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent">

                    <android.support.v7.widget.RecyclerView
                            android:id="@+id/recycler_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="gone"/>

                    <include android:layout_width="wrap_content" android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="32dp"
                             layout="@layout/loading_progressbar"/>

                </FrameLayout>


            </android.support.constraint.ConstraintLayout>


        </android.support.v4.widget.NestedScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>


    <!-- 상단 검색바 -->
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:id="@+id/toolbar_layout"
                  android:visibility="gone">

        <!-- statusbar 크기로 밑에 깔려있는 흰색 바 -->
        <View android:id="@+id/scrim_status_bar" android:layout_width="match_parent"
              android:layout_height="0dp" android:background="@color/white"/>

        <FrameLayout
                android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
                android:background="@color/white" >

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:id="@+id/search_layout2"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="@drawable/all_round_corner_background_gray" android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_marginTop="8dp">

                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="0dp" app:srcCompat="@drawable/search"
                        android:id="@+id/imageView5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:padding="5dp"/>
                <TextView
                        android:text="@string/home_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView6" app:layout_constraintStart_toEndOf="@+id/imageView5"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="16sp"
                        android:textColor="@android:color/darker_gray"/>
                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="0dp" app:srcCompat="@drawable/barcode"
                        android:id="@+id/imageView7"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" android:padding="6dp"
                        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
            </android.support.constraint.ConstraintLayout>

        </FrameLayout>

        <View android:layout_height="1dp" android:layout_width="match_parent" android:background="@color/stroke"/>

    </LinearLayout>

</FrameLayout>

